BF - Clinician image croppping in Patient Meetings page in iPad -- fixed

--- a/docroot/css/site/global/mobile.css
+++ b/docroot/css/site/global/mobile.css
@@ -1728,7 +1728,8 @@ and (min-width: 768px) {
 	}
 
 	.patient .pic-frame .pic img{
-	margin-top: -10px;
+/* 	margin-top: -10px; */
+	height:100%
 	}
 
 	.patient .time {
